Linux compatibility fix

--- a/source/shared_lib/CMakeLists.txt
+++ b/source/shared_lib/CMakeLists.txt
@@ -105,8 +105,12 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		ENDIF()
 	ENDIF()
 
-	FIND_PACKAGE(${SDL_VERSION_NAME} CONFIG REQUIRED)
-	
+	IF(VCPKG_TARGET_TRIPLET)
+		FIND_PACKAGE(${SDL_VERSION_NAME} CONFIG REQUIRED)
+	ELSE()
+		FIND_PACKAGE(${SDL_VERSION_NAME} REQUIRED)
+	ENDIF()
+
 	INCLUDE_DIRECTORIES(${${SDL_VERSION_NAME}_INCLUDE_DIR})
 	IF(UNIX)
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${${SDL_VERSION_NAME}_LIBRARY})
@@ -132,7 +136,12 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		ENDIF()
 	ENDIF()
 
-	FIND_PACKAGE(OpenAL CONFIG REQUIRED)
+	IF(VCPKG_TARGET_TRIPLET)
+		FIND_PACKAGE(OpenAL CONFIG REQUIRED)
+	ELSE()
+		FIND_PACKAGE(OpenAL REQUIRED)
+	ENDIF()
+
 	INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
 	IF(UNIX)
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${OPENAL_LIBRARY})
@@ -172,7 +181,11 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 	OPTION(WANT_USE_FTGL "Use libFTGL for on-screen fonts (found on your system)" ON)
 	find_package( Freetype REQUIRED)
 	include_directories( ${FREETYPE_INCLUDE_DIRS} )
-	FIND_PACKAGE(FTGL CONFIG REQUIRED)
+	IF(VCPKG_TARGET_TRIPLET)
+		FIND_PACKAGE(FTGL CONFIG REQUIRED)
+	ELSE()
+		FIND_PACKAGE(FTGL REQUIRED)
+	ENDIF()
 	IF(WANT_USE_FTGL)
 		if (FTGL_FOUND)
 		        MESSAGE(STATUS "**NOTE: FTGL font support was detected and enabled.")
