Fix workflow conflicts + bump cmake min version
* Workflow now runs in different concurrency group.
* Runs if build workflow succeeds.

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,10 +1,12 @@
 name: Make Snapshot
 concurrency:
-  group: build-${{ github.ref }}
+  group: snapshot-${{ github.ref }}
   cancel-in-progress: true
 on:
-  push:
-    branches: [ develop ]
+  workflow_run:
+    workflows: [CMake]
+    types: [completed]
+    branches: [develop]
 
 # The artifact only runs on the same distro that it was built on.
 # TODO: make AppImage instead
