--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -15,6 +15,7 @@ jobs:
     strategy:
       fail-fast: false
     runs-on: ubuntu-22.04
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
     - uses: actions/checkout@v3
     - name: Get dependencies
@@ -40,3 +41,10 @@ jobs:
           mk/linux/megaglest_g3dviewer
           mk/linux/*.ini
           !mk/linux/glest-dev.ini
+  on-failure:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    steps:
+      - run: | 
+        echo 'The triggering workflow failed'
+        exit 1
