Linux compatibility again

--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -52,13 +52,23 @@ IF(BUILD_MEGAGLEST)
 	        ENDIF()
         ENDIF()
 
-	FIND_PACKAGE(OpenAL CONFIG REQUIRED)
+	IF(VCPKG_TARGET_TRIPLET)
+		FIND_PACKAGE(OpenAL CONFIG REQUIRED)
+	ELSE()
+		FIND_PACKAGE(OpenAL REQUIRED)
+	ENDIF()
+
 	INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
 	IF(UNIX)
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${OPENAL_LIBRARY})
 	ENDIF()
 
-	FIND_PACKAGE(Ogg CONFIG REQUIRED)
+	IF(VCPKG_TARGET_TRIPLET)
+		FIND_PACKAGE(Ogg CONFIG REQUIRED)
+	ELSE()
+		FIND_PACKAGE(OGG REQUIRED)
+	ENDIF()
+
 	INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIR})
 	IF(UNIX)
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${VORBIS_FILE_LIBRARY})
