--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -106,6 +106,7 @@ jobs:
         cd ../..
 
     - name: Create Mega Glest Snapshot
+      if: ${{ github.ref == 'refs/heads/develop' }}
       uses: actions/upload-artifact@v3
       with:
         name: megaglest-x64-windows
