--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -30,6 +30,42 @@ jobs:
           mk/linux/g2xml
           mk/linux/xml2g
           mk/linux/AppImageSnapshotInstructions.txt
+  transfer-windows-build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    steps:
+    - name: 'Download artifact'
+      uses: actions/github-script@v6
+      with:
+        script: |
+          let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.payload.workflow_run.id,
+          });
+          let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
+            return artifact.name == "megaglest-x64-windows"
+          })[0];
+          let download = await github.rest.actions.downloadArtifact({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              artifact_id: matchArtifact.id,
+              archive_format: 'zip',
+          });
+          let fs = require('fs');
+          fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/megaglest-x64-windows.zip`, Buffer.from(download.data));
+    - name: 'Prepare artifacts'
+      run: |
+        unzip megaglest-x64-windows.zip
+    - name: Create MegaGlest Windows Snapshot
+      uses: actions/upload-artifact@v3
+      with:
+        name: megaglest-x64-windows
+        path: |
+          ${process.env.GITHUB_WORKSPACE}/*.exe
+          ${process.env.GITHUB_WORKSPACE}/*.ini
   on-failure:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
