Don't update body if one already exists
Allows making a custom body without it getting overwritten

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -61,6 +61,7 @@ jobs:
         allowUpdates: true
         prerelease: true
         replacesArtifacts: true
+        omitBodyDuringUpdate: true
         tag: snapshot
 
   on-failure:
