Don't update name in prerelease

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -59,6 +59,7 @@ jobs:
         prerelease: true
         replacesArtifacts: true
         omitBodyDuringUpdate: true
+        omitNameDuringUpdate: True
         tag: snapshot
 
   on-failure:
