Complete CI setup

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -104,9 +104,11 @@ jobs:
         ./build-mg-vs-cmake.ps1 -vcpkg-location c:/vcpkg/
 
     - name: Git Hash
+      if: ${{ github.ref == 'refs/heads/develop' }}
       run: echo "VERSION=$(git rev-parse --short HEAD)" >> $env:GITHUB_ENV
     
     - name: Prepare Snapshot
+      if: ${{ github.ref == 'refs/heads/develop' }}
       run: |
         cd mk\windoze
         Get-ChildItem *.exe | Rename-Item -NewName {$_.BaseName + "-$env:VERSION" + $_.Extension}
@@ -114,16 +116,17 @@ jobs:
         $7zPath = $(Get-Command 7z).Source
         cp $7zPath .
         Remove-Item glest-dev.ini
-        Compress-Archive -Path *.exe,*.ini -DestinationPath megaglest-x64-windows-$env:VERSION.zip
+        Compress-Archive -Path *.exe,*.ini -DestinationPath megaglest-$env:VERSION-x64-windows.zip
         cd ../..
 
-    - name: Create Mega Glest Snapshot
+    - name: Create MegaGlest Snapshot
       if: ${{ github.ref == 'refs/heads/develop' }}
       uses: actions/upload-artifact@v3
       with:
         name: megaglest-x64-windows
-        path: mk/windoze/*.zip
         retention-days: 1
+        path: mk/windoze/*.zip
+  
   on-dockerbuild-failure:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
@@ -142,7 +145,29 @@ jobs:
     - name: Get dependencies
       run: |
         mk/macos/setupBuildDeps.sh
-    - name: Bulid MegaGlest With Clang Compiler
+
+    - name: Build MegaGlest With Clang Compiler
       run: |
         mk/macos/build-mg.sh -m
         make -C mk/macos/build -j$(sysctl -n hw.ncpu) VERBOSE=1
+    
+    - name: Git Hash
+      if: ${{ github.ref == 'refs/heads/develop' }}
+      run: |
+        echo "VERSION=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+  
+    - name: Prepare Snapshot
+      if: ${{ github.ref == 'refs/heads/develop' }}
+      run: |
+        cd mk/macos
+        ./make-binary-archive.sh
+        cd -
+        mv release/mg-binary-macos*.tar.bz2 release/megaglest-$VERSION-x64-macos.tar.bz2
+
+    - name: Create MegaGlest Snapshot
+      if: ${{ github.ref == 'refs/heads/develop' }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: megaglest-x64-macos
+        retention-days: 1
+        path: release/*.tar.bz2
